--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>swing</module>
         <module>soap</module>
         <module>rest</module>
+        <module>web</module>
 	</modules>
 
 	<properties>
