--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>soap</module>
         <module>rest</module>
         <module>web</module>
+		<module>swt</module>
 	</modules>
 
 	<properties>
