--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 *.war
 *.ear
 
+# We want this JAR
+!GeburtstagsListenVerwaltung-*.jar
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
