--- a/core/org.testeditor.fixture.parent/pom.xml
+++ b/core/org.testeditor.fixture.parent/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.testeditor.fixture</groupId>
 	<artifactId>parent</artifactId>
-	<version>2.5.1-SNAPSHOT</version>
+	<version>2.5.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -80,10 +80,14 @@
                 <version>${log4j.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.fitnesse</groupId>
+        			<groupId>org.testeditor.fitnesse</groupId>
+        			<artifactId>fitnesse</artifactId>
+        			<scope>compile</scope>
+        			<version>1.9.0</version>
+<!--                <groupId>org.fitnesse</groupId>
                 <artifactId>fitnesse</artifactId>
                 <scope>compile</scope>
-                <version>${fitnesse.version}</version>
+                <version>${fitnesse.version}</version>-->
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -98,8 +102,10 @@
 			<artifactId>log4j</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.fitnesse</groupId>
-			<artifactId>fitnesse</artifactId>
+        			<groupId>org.testeditor.fitnesse</groupId>
+        			<artifactId>fitnesse</artifactId>
+<!--			<groupId>org.fitnesse</groupId>
+			<artifactId>fitnesse</artifactId>-->
 		</dependency>
 	</dependencies>
 
