--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.testeditor.fixture</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.5.2-SNAPSHOT</version>
+		<version>2.5.2</version>
 		<relativePath>../core/org.testeditor.fixture.parent</relativePath>
 	</parent>
 
