--- a/swing/pom.xml
+++ b/swing/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.testeditor.fixture</groupId>
         <artifactId>parent</artifactId>
-        <version>2.5.2</version>
+        <version>2.5.3-SNAPSHOT</version>
         <relativePath>../core/org.testeditor.fixture.parent</relativePath>
     </parent>
 
