--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>org.testeditor.fixture</groupId>
 	<artifactId>web-fixture</artifactId>
-	<version>2.5.2-SNAPSHOT</version>
+	<version>3.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Fixture used for testing WEB applications.</description>
@@ -147,29 +147,15 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 			</plugin>
-
-			<!-- copy all jars to libs folder -->
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/libs</outputDirectory>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>false</overWriteSnapshots>
-							<overWriteIfNewer>true</overWriteIfNewer>
-							<excludeArtifactIds>fitnesse</excludeArtifactIds>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<targetPath>org/testeditor/fixture/web</targetPath>
+				<directory>src/main/java/org/testeditor/fixture/web</directory>
+				<includes>
+					<include>WebDriverFixture.aml</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 </project>
